--- a/themes/minos/layout/index.ejs
+++ b/themes/minos/layout/index.ejs
@@ -1,10 +1,19 @@
 <section class="section">
     <div class="container">
-    <% page.posts.each(function(post){ %>
-        <%- partial('common/article', { post, index: true }) %>
-    <% }); %>
-    <% if (page.total > 1) { %>
-        <%- partial('common/paginator') %>
-    <% } %>
+        <div class="image-container">
+            <div class="image">
+                <img src="/images/gear.PNG">
+            </div>
+            <div class="image">
+                <img src="/images/wave.png">
+            </div>
+            <div class="image">
+                <img src="/images/clyfford.png">
+            </div>
+            <div class="image">
+                <img src="/images/colorized-lines.png">
+            </div>
+        </div>
+    </div>
     </div>
 </section>
